[package]
name = "cli_kv"
version = "0.0.1"
edition = "2021"

[dependencies]
serde_json = "1.0.113"
serde = {version = "1.0.113", features = ["derive"]}
terminal-clipboard = "0.4.1"

[profile.dev]
debug = true
strip = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "unwind"
overflow-checks = true

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
debug-assertions = false
codegen-units = 256
panic = "unwind"
